# nnet3

./: CMakeLists.txt  OnlineAudiotoVector.h  main.cpp
VAD-detecting/: vad-application.cpp  vad-detect.h  vad-test.cpp
dnn-stream/: dnn-stream.cpp
online-nnet3-decode/: OnlineClientRecieve.h  OnlineVectorInput.h  nnet3-decodable.h  nnet3-local.cpp  nnet3-test.cpp  online2-wav-nnet3-latgen-faster.cpp
